// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput should grey out icon when disabled 1`] = `
.circuit-0 {
  position: absolute;
  top: 1px;
  left: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-1 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-1::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3388FF;
}

.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

<div
  class="circuit-2"
  disabled=""
>
  <svg
    class="circuit-0"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M2 7a5 5 0 1110 0A5 5 0 012 7zm5-7a7 7 0 104.192 12.606l3.1 3.101a1 1 0 001.415-1.414l-3.1-3.1A7 7 0 007 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <input
    class="circuit-1"
    disabled=""
    id="input_2"
    type="text"
    value=""
  />
</div>
`;

exports[`SearchInput should render with default styles 1`] = `
.circuit-2 {
  color: #212933;
  display: block;
  position: relative;
  margin-bottom: 16px;
}

label > .circuit-2,
label + .circuit-2 {
  margin-top: 4px;
}

.circuit-0 {
  position: absolute;
  top: 1px;
  left: 1px;
  pointer-events: none;
  color: #5C656F;
  padding: 12px;
  height: 40px;
  width: 40px;
}

.circuit-1 {
  background-color: #FFFFFF;
  border: none;
  border-radius: 8px;
  padding: 8px 12px;
  -webkit-transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  transition: box-shadow 200ms ease-in-out, padding 200ms ease-in-out;
  width: 100%;
  margin: 0;
  font-size: 16px;
  line-height: 24px;
  padding-left: calc( 12px + 16px + 12px );
  padding-right: calc( 12px + 16px + 12px );
  box-shadow: 0 0 0 1px #9DA7B1;
}

.circuit-1::-webkit-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1::-moz-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1:-ms-input-placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1::placeholder {
  color: #9DA7B1;
  -webkit-transition: color 200ms ease-in-out;
  transition: color 200ms ease-in-out;
}

.circuit-1:hover {
  box-shadow: 0 0 0 1px #5C656F;
}

.circuit-1:focus {
  box-shadow: 0 0 0 2px #3388FF;
}

.circuit-1:active {
  box-shadow: 0 0 0 1px #3388FF;
}

<div
  class="circuit-2"
>
  <svg
    class="circuit-0"
    fill="none"
    height="16"
    viewBox="0 0 16 16"
    width="16"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      clip-rule="evenodd"
      d="M2 7a5 5 0 1110 0A5 5 0 012 7zm5-7a7 7 0 104.192 12.606l3.1 3.101a1 1 0 001.415-1.414l-3.1-3.1A7 7 0 007 0z"
      fill="currentColor"
      fill-rule="evenodd"
    />
  </svg>
  <input
    class="circuit-1"
    id="input_1"
    type="text"
    value=""
  />
</div>
`;
